--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -10,3 +10,29 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Create ZIP Deployment Package
+        run: zip -r deploy_package.zip ./
+      
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+          aws-region: "us-east-1"
+      
+      - name: Upload package to S3 bucket
+        run: aws s3 cp deploy_package.zip s3://my-app-deploy-milind/
+      
+      - name: Create new ElasticBeanstalk Application Version
+        run: |
+          aws elasticbeanstalk create-application-version \
+          --application-name MyAwesomeApp \
+          --source-bundle S3Bucket="my-awesome-app-deploy-milind",S3Key="deploy_package.zip" \
+          --version-label "ver-${{ github.sha }}" \
+          --description "commit-sha-${{ github.sha }}"
+      
+      - name: Deploy new ElasticBeanstalk Application Version
+        run: aws elasticbeanstalk update-environment --environment-name my-app-test-1 --version-label "ver-${{ github.sha }}"
+      
+      
