--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           aws elasticbeanstalk create-application-version \
           --application-name my-app \
-          --source-bundle S3Bucket="my-awesome-app-deploy-milind",S3Key="deploy_package.zip" \
+          --source-bundle S3Bucket="my-app-deploy-milind",S3Key="deploy_package.zip" \
           --version-label "ver-${{ github.sha }}" \
           --description "commit-sha-${{ github.sha }}"
       
