--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -34,6 +34,6 @@ jobs:
           --description "commit-sha-${{ github.sha }}"
       
       - name: Deploy new ElasticBeanstalk Application Version
-        run: aws elasticbeanstalk update-environment --environment-name my-app-test-1 --version-label "ver-${{ github.sha }}"
+        run: aws elasticbeanstalk update-environment --environment-name my-app --version-label "ver-${{ github.sha }}"
       
       
